--- a/Project-0/advsearch.html
+++ b/Project-0/advsearch.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>Search</title>
+        <title>Search | Google</title>
     </head>
     <body>
         <div id="img">
